--- a/style.css
+++ b/style.css
@@ -105,8 +105,12 @@ textarea {
   background-color: whitesmoke;
   box-shadow: 10px 10px 5px grey;
   border-radius: 20px;
-  background-color: #f2f2f2;
-  
+  background-color: #f2f2f2;  
+}
+
+.contactBody {
+  display: flex;
+  justify-content: center;  
 }
 
 .date {
