--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h2 {
   padding: 10px 0px 0px 20px;
 }
 
-label {
+.form-label {
   font-size: 30px;
   color: darkcyan;
 }
@@ -111,4 +111,43 @@ textarea {
 footer {
   font-size: 20px;
   text-align: right;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+background: #3B5998;
+color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.links-header {
+  color: rgb(107, 69, 112);
+  padding: 10px 0px 0px 20px;
 }
