--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
 
 body {
   padding: 20px;
-  background-image: url('sebastien-gabriel--IMlv9Jlb24-unsplash.jpg');
+  background-image: url('sunset.jpg');
 }
 main {
   display: flex;
