Readjusting the pages

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+body{ height:100vh; margin:0; }
+
 html {
   font-family: sans-serif;
 }
@@ -10,6 +12,7 @@ html {
   border-radius: 30px;
   margin-bottom: 30px;
 }
+
   
 /* Links inside the navbar */
 .navbar a {
@@ -24,9 +27,19 @@ html {
   color: #f1f1f1;
 }
 
+.navbar a:active {
+  background-color: white;
+}
+p {
+  margin-left: 20px;
+  margin-right: 10px;
+}
+
 body {
   padding: 20px;
   background-image: url('sunset.jpg');
+  display:flex; 
+  flex-direction:column;
 }
 main {
   display: flex;
@@ -109,6 +122,7 @@ textarea {
 }
 
 footer {
+  margin-top:auto; 
   font-size: 20px;
   text-align: right;
 }
