--- a/style.css
+++ b/style.css
@@ -1,177 +1,21 @@
-body{ height:100vh; margin:0; }
-
-html {
-  font-family: sans-serif;
+@media all and (min-width: 992px) {
+	.navbar .nav-item .dropdown-menu{  display:block; opacity: 0;  visibility: hidden; transition:.3s; margin-top:0;  }
+	.navbar .nav-item:hover .nav-link{ color: #fff;  }
+	.navbar .dropdown-menu.fade-down{ top:80%; transform: rotateX(-75deg); transform-origin: 0% 0%; }
+	.navbar .dropdown-menu.fade-up{ top:180%;  }
+	.navbar .nav-item:hover .dropdown-menu{ transition: .3s; opacity:1; visibility:visible; top:100%; transform: rotateX(0deg); }
 }
 
-.navbar {   
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  background-color: #111;
-  border-radius: 30px;
-  margin-bottom: 30px;
+.bg {
+	background-size: cover;
+	height: 40rem;
+	background-image: url('./background.jpeg');
 }
 
-  
-/* Links inside the navbar */
-.navbar a {
-  padding: 8px 8px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  transition: 0.2s; 
+.fs-4 {
+	font-size: 1.5rem;
 }
 
-.navbar a:hover {
-  color: #f1f1f1;
-}
-
-.navbar a:active {
-  background-color: white;
-}
-.video {
-  display: flex;
-  justify-content: center;
-}
-
-p {
-  margin-left: 20px;
-  margin-right: 10px;
-}
-
-body {
-  padding: 20px;
-  background-image: url('sunset.jpg');
-  display:flex; 
-  flex-direction:column;
-}
-main {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 15px;
-  padding: 16px;
-}
-
-form {
-  margin-top: 15px;
-  margin-left: 50px;
-}
-
-h2 {
-  color: darkcyan;
-  padding: 10px 0px 0px 20px;
-}
-
-.form-label {
-  font-size: 30px;
-  color: darkcyan;
-}
-
-input[type=text] {
-  width: 90%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 2px;
-  margin-bottom: 10px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  font-size: 20px;
-  background-color: #218624;
-  margin-bottom: 5px;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-textarea {
-  width: 90%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-.contactForm {
-  margin-left: 50px;
-  width: 40%;
-  padding: 20px;
-  background-color: whitesmoke;
-  box-shadow: 10px 10px 5px grey;
-  border-radius: 20px;
-  background-color: #f2f2f2;  
-}
-
-.contactBody {
-  display: flex;
-  justify-content: center;  
-}
-
-.date {
-  font-style: italic;
-}
-.Box {
-  background-color: whitesmoke;
-  box-shadow: 10px 10px 5px grey;
-  border-radius: 20px;
-  width: 30%;
-}
-
-footer {
-  margin-top:auto; 
-  font-size: 20px;
-  text-align: right;
-}
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-}
-
-.fa:hover {
-  opacity: 0.7;
-}
-
-.fa-facebook {
-background: #3B5998;
-color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-.fa-github {
-  background: #6afad8;
-  color: white;
-}
-
-.links-header {
-  color: rgb(107, 69, 112);
-  padding: 10px 0px 0px 20px;
+.fs-5 {
+	font-size: 2rem;
 }
