Added contact form and socials

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .bg {
 	background-size: cover;
 	height: 40rem;
@@ -12,4 +10,52 @@
 
 .fs-5 {
 	font-size: 2rem;
+}
+
+.fas {
+	padding: 20px;
+	margin: 2rem;
+	width: 100%;
+	text-align: center;
+	text-decoration: none;
+}
+
+.fas:hover {
+	opacity: 0.7;
+}
+  
+.fa-facebook {
+	margin: 1rem;
+	font-size: 4rem;
+	background: #3B5998;
+	color: white;
+}
+
+.fa-twitter {
+	margin: 1rem;
+	font-size: 4rem;
+	background: #55ACEE;
+	color: white;
+}
+
+.fa-github {
+	margin: 1rem;
+	font-size: 4rem;
+	background: rgb(2, 2, 2);
+	color: white;
+}
+
+.fa-linkedin {
+	margin: 1rem;
+	font-size: 4rem;
+	background: #214a69;
+	color: white;
+}
+
+
+.fa-instagram {
+	margin: 1rem;
+	font-size: 4rem;
+	background: #214a69;
+	color: white;
 }
